--- a/src/app/nav/nav.component.css
+++ b/src/app/nav/nav.component.css
@@ -1,29 +1,23 @@
 .bar{background-color: #1C58B0;
   top: 0px;
   left: 0px;
+  width: 1000px;
  }
-.sidenav-container {
-  height: 100%;
-}
 
-.sidenav {
-  width: 200px;
-}
 
-.sidenav .mat-toolbar {
-  background: inherit;
-}
 
 .mat-toolbar.mat-primary {
   position: sticky;
-  top: 0;
-  z-index: 1;
+
+
 }
 
 .mainc{position: absolute;
-  width: 1620px;
+  
+  width: 1478px;
   height: 50px;
-  left: 0px;
+  left: 50px;
+  
   top: 0px;
 background-color:#1C58B0;
 box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.2), 0px 2px 2px rgba(0, 0, 0, 0.14), 0px 1px 5px rgba(0, 0, 0, 0.12);
@@ -33,10 +27,10 @@ border-radius: 20px;}
 
 
 
-.link1{position: absolute;
-
-  left: 1200px;
-  top: 0px;
+.link1{
+  width: 50px;
+  left: 50px;
+  top: -10px;
   
   font-family: 'Roboto';
   font-style: normal;
@@ -53,12 +47,35 @@ border-radius: 20px;}
   
   color: #FFFFFF;
   }
+  .link1:hover{width: 80px;}
+  .link2:hover{width: 140px;}
+  .link3:hover{width: 120;}
 
-.link2{  position: absolute;
+  .link3{
+    width: 50px;
+    left: 150px;
+    top: -10px;
+    
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 36px;
+  
+  
+  
+  
+    align-items: center;
+    text-align: center;
+    letter-spacing: 1.25px;
+    
+    color: #FFFFFF;
+    }
+.link2{
 width: 122px;
 height: 13px;
-left: 1300px;
-top: 0px;
+left: 100px;
+top: -10px;
 
 font-family: 'Roboto';
 font-style: normal;
@@ -100,6 +117,7 @@ color: #FFFFFF;
   width: 100%;
 }
 .btn{
+  left: 1100px;
   display: flex;
 flex-direction: row;
 justify-content: center;
@@ -109,7 +127,7 @@ padding: 0px 16px;
 position: absolute;
 width: 103px;
 height: 57px;
-left: 1500px;
+left: 1350px;
 top: -9px;
 color: white;
 
@@ -133,3 +151,5 @@ border-radius: 50px;
   color: #FCC02E;
   margin-top: 10px;
 }
+.c1{display: flex
+  ;}
